UI Refactoring / cleanup

--- a/modules/conditions/client/views/condition-edit.html
+++ b/modules/conditions/client/views/condition-edit.html
@@ -75,10 +75,10 @@
 				</div>
 			</div>
 			
-			<div class="form-footer no-border clearfix">
+			<div class="form-footer clearfix">
 				<div class="pull-right">
 					<button class="btn btn-default" ui-sref="admin.condition.list">Cancel</button>
-					<button class="btn btn-default" type="submit">Save</button>
+					<button class="btn btn-primary" type="submit">Save</button>
 				</div>
 			</div>
 
