--- a/modules/email-templates/client/views/email-template-edit.html
+++ b/modules/email-templates/client/views/email-template-edit.html
@@ -62,7 +62,7 @@
 			<div class="form-footer clearfix">
 				<div class="pull-right">
 					<button class="btn btn-default" ui-sref="admin.emailtemplate.list">Cancel</button>
-					<button class="btn btn-default" type="submit">Save</button>
+					<button class="btn btn-primary" type="submit">Save</button>
 				</div>
 			</div>
 
