--- a/modules/roles/client/views/project-role-view.html
+++ b/modules/roles/client/views/project-role-view.html
@@ -95,9 +95,9 @@
       </section>
 		</div>
 
-		<div class="form-footer no-border clearfix">
-				<a class="btn btn-default btn-sm pull-left" ui-sref="p.roles.list">&lsaquo;&nbsp; Back to Project Roles</a>
-				<a class="btn btn-default btn-sm pull-right" ui-sref="p.roles.edit({roleCode:role.code})">Edit</a>
+		<div class="form-footer clearfix">
+				<a class="back-btn btn pull-left" ui-sref="p.roles.list"><span class="glyphicon glyphicon-chevron-left"></span>Back to Project Roles</a>
+				<a class="btn btn-default pull-right" ui-sref="p.roles.edit({roleCode:role.code})">Edit</a>
 		</div>
 
 	</div>
