--- a/modules/users/client/views/user-partials/user-activities.html
+++ b/modules/users/client/views/user-partials/user-activities.html
@@ -24,7 +24,7 @@
                 <div class="panel panel-default" style="margin-bottom: 1.5rem;">
                     <div class="panel-heading"><h2>My Projects</h2></div>
                     <div class="panel-body" style="padding: 0;">
-                        <table ng-table="projectParams" class="projects-table table table-condensed table-striped">
+                        <table ng-table="projectParams" class="projects-table table table-striped">
                             <tr ng-repeat="o in $data">
                                 <td data-title="'Name'" sortable="'name'">
                                     {{o.name}}
