--- a/modules/conditions/client/views/condition-list.html
+++ b/modules/conditions/client/views/condition-list.html
@@ -16,16 +16,16 @@
 		</div>
 
 		<section class="panel panel-default">
-			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-condensed table-striped table-hover">
+			<table ng-table="tableParams" x-show-filter="toggleFilter" class="table table-striped table-hover">
 				<tr ng-repeat="o in $data" ui-sref="admin.condition.detail({conditionId:o._id})" class="clickable">
 					<td data-title="'Sector'"  filter="{'sector':'select'}"   sortable="'sector'"  filter-data="ptypes" >{{o.sector}}</td>
 					<td data-title="'Name'"  filter="{'name':'text'}"   sortable="'name'" >{{o.name}}</td>
 					<td data-title="'Subject'" filter="{'subject':'text'}"    sortable="'subject'" >{{o.subject}}</td>
 					<td data-title="'Stages'"   filter="{'stages':'text'}"  sortable="'stages'" >{{o.stageString}}</td>
 					<td data-title="'Pillars'"  filter="{'pillars':'text'}" sortable="'pillars'"  >{{o.pillarString}}</td>
-					<td class="actions-col" header-class="'actions-col single-action'">
+					<td class="actions-col action-x1" header-class="'actions-col action-x1'">
 						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="admin.condition.edit({conditionId:o._id})">
-						<i class="glyphicon glyphicon-pencil"></i>
+							<span class="glyphicon glyphicon-pencil"></span>
 						</a>
 					</td>
 				</tr>
