--- a/modules/vcs/client/views/vc-edit.html
+++ b/modules/vcs/client/views/vc-edit.html
@@ -5,8 +5,8 @@
 	</div>
 
 	<div class="view-body-container">
-		<div class="row">
-			<div class="col-sm-12 text-right hidden">
+		<div class="row hidden">
+			<div class="col-sm-12 text-right">
 				<a class="btn btn-xs btn-link" ui-sref="p.vc.list">Cancel</a>
 				<a class="btn btn-xs btn-link" href ng-click="save()">Save</a>
 			</div>
@@ -14,7 +14,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="form-group">
-					<label for="title" class="control-label">Valued Component Name</label>
+					<label for="title" class="control-label">Name</label>
 					<input id="title" type="text" class="form-control input-sm" ng-model="vc.name" disabled="disabled">
 				</div>
 			</div>
@@ -28,7 +28,7 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="form-group">
-					<label for="title" class="control-label">Valued Component Title</label>
+					<label for="title" class="control-label">Title</label>
 					<input id="title" type="text" class="form-control input-sm" ng-model="vc.title">
 				</div>
 			</div>
@@ -36,8 +36,8 @@
 		<div class="row">
 			<div class="col-sm-12">
 				<div class="form-group">
-					<label for="shortDesc" class="control-label">Valued Component Description</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="vc.description" rows=6></textarea>
+					<label for="shortDesc" class="control-label">Description</label>
+					<textarea id="shortDesc" type="text" class="form-control input-sm text-area" ng-model="vc.description" rows="4"></textarea>
 				</div>
 			</div>
 		</div>
@@ -45,7 +45,7 @@
 			<div class="col-sm-12">
 				<div class="form-group">
 					<label for="shortDesc" class="control-label">Report Requirements</label>
-					<textarea id="shortDesc" type="text" class="form-control input-sm" ng-model="vc.reportRequirements" rows=6></textarea>
+					<textarea id="shortDesc" type="text" class="form-control input-sm text-area" ng-model="vc.reportRequirements" rows="4"></textarea>
 				</div>
 			</div>
 		</div>
@@ -67,12 +67,14 @@
 				</div>
 			</div>
 		</div>
-		<hr>
-		<div text-align="right">
-			<a class="btn btn-default" ui-sref="p.vc.list">Cancel</a>
-			<a class="btn btn-default" href ng-click="save()">Save</a>
+		
+		<div class="form-footer clearfix">
+			<div class="pull-right">
+				<a class="btn btn-default" ui-sref="p.vc.list">Cancel</a>
+				<a class="btn btn-primary" href ng-click="save()">Save</a>
+			</div>
 		</div>
-	</div>
+	</div><!-- / VIEW BODY CONTAINER -->
 	
 </div>
 
