ESM-205 - Removing Estimated Phase completion date from tombstone

--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -2419,12 +2419,10 @@ section.project-info {
 ------------------------------ */ 
 .edit-project-details-view {
 	.tab-content {
-		padding: 2rem;
-		border: 1px solid #DDD;
-		border-top: none;
-		background: #FFF;
+		padding-top: 3rem;
 	}
 }
+
 
 /* DOCUMENT BROWSER VIEW
 ------------------------------ */
