--- a/modules/artifacts/client/views/artifact-edit.html
+++ b/modules/artifacts/client/views/artifact-edit.html
@@ -6,6 +6,7 @@
 	<div class="col-sm-12">
 		<div class="form-inline text-right">
 			<a class="btn btn-sm btn-link" ui-sref="p.detail">Cancel</a>
+			<a class="btn btn-sm btn-link" ng-click="remove()">Remove</a>
 			<a class="btn btn-sm btn-link" ng-click="save()">Save</a>
 			<a class="btn btn-sm btn-link" ng-click="saveas()">Save As</a>
 			<select ng-model="version" class="input-sm" ng-options="v as v for v in artifact.artifactType.versions"></select>
