--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -176,19 +176,8 @@ a.control-label:hover,
 	display: none !important;
 }
 
-a:hover,
-a:link,
-a:active,
-a:visited {
-	text-decoration: none !important;
-}
-
 button:focus, a:focus {
 	outline: 0 !important;
-}
-
-a:hover {
-	text-decoration: none;
 }
 
 h1,h2,h3,h4,h5,h6 {
@@ -1606,19 +1595,6 @@ $left-panel-width: 17rem;
 	padding: 2rem 2.5rem;
 }
 
-section {
-	h2 {
-		display: block;
-		margin-top: 0;
-		font-size: 1.6rem;
-		font-weight: bold;
-		white-space: nowrap;
-		overflow: hidden;
-		text-overflow: ellipsis;
-	}
-}
-
-
 /* ACTIVITIES LIST
 ------------------------------ */
 .activities-container {
@@ -1764,6 +1740,8 @@ section {
 		margin: 0;
 		display: block;
 		overflow: hidden;
+		font-size: 1.6rem;
+		font-weight: bold;
 		text-overflow: ellipsis;
 	}
 }
@@ -2311,14 +2289,20 @@ hr {
 ------------------------------ */
 .project-details {
 	section {
-		margin: 2rem 0;
+		margin-bottom: 2rem;
+	}
+	
+	section:last-child {
+		margin-bottom: 0;
+	}
+	
+	section.project-info {
+		margin-top: 0.5rem;
+		margin-bottom: 1.5rem;
 	}
 }
 
 section.project-info {
-	margin-top: 0;
-	margin-bottom: 3rem;
-	
 	.panel-body {
 		padding: 1.5rem 2rem;
 	}
@@ -2366,19 +2350,24 @@ section.project-info {
 }
 
 .detail-row {
-	margin: 1rem 0;
+	margin: 1.5rem 0;
 	
 	label, span.value {
 		display: block;
+		white-space: nowrap;
+		overflow: hidden;
+		text-overflow: ellipsis;
 	}
 	
 	label {
-		margin-bottom: 0;
+		min-width: 14rem;
+		margin-bottom: .2rem;
 		font-weight: 600;
+		text-shadow: 0 0 0 #FFF;
 	}
 	
-	em {
-		color: #999;
+	span.value {
+		color: #888;
 	}
 }
 
@@ -2386,21 +2375,10 @@ section.project-info {
 	margin-top: 0;
 }
 
-@media (min-width: 1024px) {
-	.detail-row {
-		display: table-row;
-		
-		label, span.value {
-			display: table-cell;
-			vertical-align: top;
-			padding: 0.5rem 0;
-		}
-		
-		label {
-			padding-right: 2rem;
-			text-align: left;
-			white-space: nowrap;
-		}
+.detail-row.project-desc {
+	span.value {
+		white-space: normal;
+		overflow: visible;
 	}
 }
 
@@ -2411,6 +2389,24 @@ section.project-info {
 	
 	 .description {
 		margin-top: 1.5rem;
+	}
+}
+
+@media (min-width: 1024px) {
+	.mem-details .detail-row {
+		display: table-row;
+		
+		label, span.value {
+			display: table-cell;
+			vertical-align: top;
+			padding: 0.4rem 0;
+		}
+		
+		label {
+			padding-right: 2rem;
+			text-align: left;
+			white-space: nowrap;
+		}
 	}
 }
 
