Project Enforcements prototype
- Exposing the artifacts list to public (as per request)
- UI clean-up on artifact-list.html
- Adding the side menu back in for public (we'll need this as more and more information becomes available for the public view)

--- a/modules/projects/client/views/project-partials/project.detail.html
+++ b/modules/projects/client/views/project-partials/project.detail.html
@@ -52,7 +52,9 @@
 			ng-if="('project'| shouldDisplayPanel:'stream':project.status) && environment === 'EAO'">
 		</tmpl-project-stream-select>
 
-		<section class="project-artifacts" ng-if="environment === 'EAO' && authentication.user">
+		<!-- EXPOSING FOR DEMO PURPOSES ONLY -->
+		<!-- ng-if="environment === 'EAO' && authentication.user" -->
+		<section class="project-artifacts" ng-if="environment === 'EAO'">
 			<div id="anchor-artifacts">
 				<tmpl-artifact-list x-project="project"></tmpl-artifact-list>
 			</div>
