--- a/modules/projects/client/views/project.abstract.html
+++ b/modules/projects/client/views/project.abstract.html
@@ -1,8 +1,9 @@
 <section id="project-view">
 
     <div class="view-content">
+        
          <!-- SIDE NAVIGATION -->
-         <aside class="left-panel" id="main-side-section" ng-if="authentication.user">
+         <aside class="left-panel" id="main-side-section">
             <tmpl-system-menu x-menu-context="'project'" x-project="project"></tmpl-system-menu>
          </aside>
 
