--- a/modules/artifacts/client/views/artifact-list.html
+++ b/modules/artifacts/client/views/artifact-list.html
@@ -25,27 +25,27 @@
 			
 		</div>
 
-	<table ng-table="s.tableParams" x-show-filter="toggleFilter" class="table table-condensed table-hover table-striped">
-		<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
-			<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
-			<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
-			<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.stage}}</td>
-			<td data-title="'Published'" sortable="'isPublished'"><i ng-if="o.isPublished" class="glyphicon glyphicon-ok"></i></td>
-			<td class="actions-col">
-				<span ng-if="o.userPermissions.write"> <!-- && !o.isPublished"> -->
-					<a ng-click="$event.stopPropagation()" class="btn btn-link btn-xs" ui-sref="p.artifact.edit({artifactId:o._id})">
-						<i class="glyphicon glyphicon-pencil"></i>
-					</a>
-				</span>
-			</td>
-		</tr>
-		<tr ng-if="!$data || $data.length === 0">
-			<td colspan="5">
-				<span ng-if="!s.public">To add an artifact, select from the list above and click the Add button.</span>
-				<span ng-if="s.public">There are no artifacts available at this time.</span>
-			</td>
-		</tr>
-	</table>
+		<table ng-table="s.tableParams" x-show-filter="toggleFilter" class="table table-hover table-striped">
+			<tr ng-repeat="o in $data" ui-sref="p.artifact.view({artifactId:o._id})" class="clickable">
+				<td data-title="'Name'"    filter="{'name':'text'}"     sortable="'name'"    >{{o.name}}</td>
+				<td data-title="'Version'" filter="{'version':'text'}"   	class="text-center" sortable="'version'"  >{{o.version}}</td>
+				<td data-title="'Stage'"   filter="{'stage':'text'}"    	class="text-center" sortable="'stage'"   >{{o.stage}}</td>
+				<td data-title="'Published'" sortable="'isPublished'"><i ng-if="o.isPublished" class="glyphicon glyphicon-ok"></i></td>
+				<td class="actions-col action-x1" header-class="'actions-col action-x1'">
+					<span ng-if="o.userPermissions.write"> <!-- && !o.isPublished"> -->
+						<a ng-click="$event.stopPropagation()" class="btn btn-link btn-sm" ui-sref="p.artifact.edit({artifactId:o._id})">
+							<span class="glyphicon glyphicon-pencil"></span>
+						</a>
+					</span>
+				</td>
+			</tr>
+			<tr ng-if="!$data || $data.length === 0">
+				<td colspan="5">
+					<span ng-if="!s.public">To add an artifact, select from the list above and click the Add button.</span>
+					<span ng-if="s.public">There are no artifacts available at this time.</span>
+				</td>
+			</tr>
+		</table>
 	</div>
 
 </div>
