--- a/modules/core/client/scss/core.scss
+++ b/modules/core/client/scss/core.scss
@@ -1657,6 +1657,17 @@ $left-panel-width: 17rem;
 }
 
 
+/* ALERT (CUSTOM 
+------------------------------ */
+.alert-custom {
+	margin-bottom: 2.5rem;
+	padding: 1.5rem;
+	color: #FFF;
+	border-radius: 4px;
+	background: rgb(92, 184, 92);
+}
+
+
 /* BADGES
 ------------------------------ */
 .badge {
@@ -1931,7 +1942,7 @@ $header-height: 6rem;
 	padding: 1rem 2rem;
 	font-size: 1.2rem;
 	background: #FFF;
-	border-top: 1px solid #CCC;
+	border-top: 1px solid #EEE;
 	z-index: 999;
 }
 
@@ -1988,7 +1999,7 @@ $header-height: 6rem;
 		
 		a {
 			display: block;
-			padding: 1.25rem;
+			padding: 1.25rem 1.5rem;
 			font-weight: bold;
 			color: #000;
 			
@@ -2200,6 +2211,21 @@ hr {
 /* BEGIN: VIEW/PAGE-SPECIFIC STYLING
 ------------------------------------------------------------ */
 
+
+/* ARTIFACT LIST VIEW
+------------------------------ */
+.artifact-list-view {	
+	.artifacts-dropdown {
+		margin-right: 2rem;
+		width: 30rem;
+	}
+	
+	.artifacts-list-actions {
+		margin: -0.7rem 0;
+	}
+}
+
+
 /* CONDITIONS VIEW
 ------------------------------ */
 .project-conditions-view {
@@ -2230,6 +2256,63 @@ hr {
 		th:last-child {
 			width: 6rem;
 			text-align: right;
+		}
+	}
+}
+
+
+/* COMPLAINCE OVERSIGHT VIEW
+------------------------------ */
+.compliance-oversight-view {
+	.ir-cert-requirements {
+		padding: 2rem 1.5rem;
+		
+		h3 {
+			margin: 0;
+			font-size: 1.4rem;
+			font-weight: bold;
+		}
+		
+		ul {
+			margin: 0;
+			margin-top: 1.5rem;
+			padding: 0;
+			list-style-position: inside;
+			list-style-type: square;
+		}
+	}
+	.actions-table-container {
+		.table {
+			border-top: 1px solid #DDD;
+			
+			th, td {
+				padding: 1rem 1.5rem;
+			}
+		}
+		
+		.enforcement-col {	
+			.glyphicon {
+				font-size: 1.3rem;
+				vertical-align: middle;
+				margin-top: -5px;
+				margin-right: 1rem;
+			}
+		}
+		
+		.date-col {
+			width: 12rem;
+			text-align: right;
+		}
+		
+		.status-col {
+			width: 10rem;
+			
+			.label {
+				display: inline-block;
+				min-width: 8rem;
+				padding-top: 0.6rem;
+				text-transform: uppercase;
+			}
 		}
 	}
 }
@@ -2312,34 +2395,22 @@ section.project-info {
 	}
 }
 
-
 .project-phases {
 	.panel-body {
-		padding: 3rem 0;
+		padding-left: 0;
+		padding-right: 0;
+		overflow: hidden;
+		
+		.anchor-section {
+			margin-left: -15px;
+			margin-right: -15px;
+		}
 	}
 }
 
 .project-artifacts {
 	.panel {
 		margin-bottom: 0;
-	}
-	
-	table {
-		table-layout: fixed;
-		
-		th {
-			border-bottom: none !important;
-		}
-		
-		th, td {
-			padding: 0.75rem 1rem !important;
-			text-align: left;
-		}
-		
-		td:last-child {
-			width: 10rem;
-			text-align: right;
-		}
 	}
 }
 
@@ -2439,28 +2510,6 @@ section.project-info {
 		margin-right: 0.5rem;
 		font-size: 1.8rem;
 		vertical-align: middle;
-	}
-}
-
-/* SYSTEM ROLES VIEW
------------------------------- */
-.system-role-view {
-	.panel {
-		margin-top: 2rem;
-	}
-}
-
-
-/* ARTIFACT LIST VIEW
------------------------------- */
-.artifact-list-view {	
-	.artifacts-dropdown {
-		margin-right: 2rem;
-		width: 30rem;
-	}
-	
-	.artifacts-list-actions {
-		margin: -0.7rem 0;
 	}
 }
 
@@ -2676,6 +2725,15 @@ section.project-info {
 	.select-col {
 		width: 5rem;
 		text-align: center;
+	}
+}
+
+
+/* SYSTEM ROLES VIEW
+------------------------------ */
+.system-role-view {
+	.panel {
+		margin-top: 2rem;
 	}
 }
 
