--- a/modules/core/client/views/menu.client.view.html
+++ b/modules/core/client/views/menu.client.view.html
@@ -1,19 +1,12 @@
 <section id="menu-side" class="sidenav">
 
-	<!-- Common on all pages Logged In -->
-	<div class="hidden" ng-show="menu.authentication.user">
-		<ul class="list-unstyled">
-			<li><a ui-sref="projects" href>All Projects</a></li>
-			<!-- <li><a href ui-sref="projects.schedule">Schedule</a></li> -->
-		</ul>
-	</div>
-
-	<!-- Common on all pages Not Logged In -->
+	<!-- PUBLIC USERS (COMMON) -->
 	<div class="hidden" ng-show="!menu.authentication.user">
 		<ul class="list-unstyled">
-			<li><a ui-sref="projects" href>All Projects</a></li>
+			<li><a ui-sref="details" href>Project Details</a></li>
+			<li><a ui-sref="enforcements" href>Compliance Oversight</a></li>
 		</ul>
-	</div>
+	</div><!-- / PUBLIC USERS (COMMON) -->
 
 	<div ng-if="(menu.context === 'projects' || menu.context === 'mylist') && menu.pageAnchors('anchor-group-projects')" id="anchor-group-projects">
 		<ul class="list-unstyled">
@@ -25,14 +18,12 @@
 	</div>
 
 	<div ng-if="(menu.context === 'projects' || menu.context === 'mylist') && menu.projectsMenu.shouldRender(menu.authentication.user);">
-
-		<ul class="list-unstyled">
+		<ul class="list-unstyle">
 			<li ng-repeat="item in menu.projectsMenu.items | orderBy: 'position'" ng-if="item.shouldRender(menu.authentication.user);" ng-class="{ active: $state.includes(item.state) }" class="{{item.class}}">
 				<a ui-sref="{{item.state}}" ng-bind="item.title"></a>
 			</li>
 		</ul>
 	</div>
-
 
 	<div ng-if="(menu.context === 'project' || menu.context === 'activity') && menu.pageAnchors('anchor-group-project');" id="anchor-group-project">
 		<hr>
@@ -48,21 +39,19 @@
 		</ul>
 	</div>
 
+	<!-- PROJECT MENU - AUTHENTICATED -->
 	<div ng-if="(menu.context === 'project' || menu.context === 'activity') && menu.authentication.user">
-
 		<ul class="list-unstyled">
 			<li><a ui-sref="p.detail({projectid: menu.project.code})">Project Detail</a></li>
 		</ul>
-
+		
+		<!-- PROJECT CLIENT MENUS (project.client.menus.js) -->
 		<ul class="list-unstyled" ng-show="menu.authentication.user">
 			<li ng-repeat="item in menu.projectTopMenu.items | orderBy: 'position'" ng-if="item.shouldRender(menu.authentication.user, menu.project.code);"
 			    ng-class="{ 'active': $state.includes(item.state) }" class="{{item.class}}">
 				<a ui-sref="{{item.state}}" ng-bind="item.title"></a>
 			</li>
-<!-- 			<li ng-if="menu.isEAO">
-				<a x-modal-project-schedule href x-project="menu.project">Project Schedule</a>
-			</li> -->
-		</ul>
+		</ul><!-- / PROJECT CLIENT MENUS -->
 
 		<ul class="list-unstyled" ng-show="menu.projectMenu.shouldRender(menu.authentication.user, menu.project.code)">
 			<li ng-repeat="item in menu.projectMenu.items | orderBy: 'position'"
@@ -73,15 +62,14 @@
 		</ul>
 
 		<ul class="list-unstyled" ng-show="menu.authentication.user">
-			<li><a ui-sref="p.workinggroup.list">Working Group</a></li>
+			<li>
+				<a ui-sref="p.workinggroup.list">Working Group</a>
+			</li>
+			<li>
+				<a x-modal-set-object-permissions href x-project="menu.project" x-target-object="menu.project" x-target-object-type="'projects'">Set Object Permissions</a>
+			</li>
 		</ul>
-
-    <ul class="list-unstyled" ng-show="menu.authentication.user">
-      <li>
-        <a x-modal-set-object-permissions href x-project="menu.project" x-target-object="menu.project" x-target-object-type="'projects'">Set Object Permissions</a>
-      </li>
-    </ul>
-  </div>
+  </div><!-- / PROJECT MENU - AUTHENTICATED -->
 
 </div>
 
